# bowling-kata

./: README.md  pyproject.toml  pyvenv.cfg  readme.md  setup.cfg  test_bowling.py  tox.ini
src/bowling/: bowling.py
tests/: test_bowling.py
